# aoc-cli

./: Cargo.toml  README.md
src/: api.rs  display.rs  main.rs  value_enum.rs
src/commands/: mod.rs  new.rs  run.rs  set_solution.rs  token.rs  trust.rs
src/python/: mod.rs  solutions.rs
test_data/: already_solved.html  incorrect.html  success.html  too_high.html  too_soon.html
