[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"
authors = ["TheSuperGamer20578"]
description = "A CLI for running Advent of Code solutions."

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
pyo3 = "0.20.0"
reqwest = "0.11.22"
serde = "1.0.193"
tokio = { version = "1.34.0", features = ["full"] }
twig = "0.1.0"
