[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"
authors = ["TheSuperGamer20578"]
description = "A CLI for running Advent of Code solutions."
license = "GPL-3"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }
glob = "0.3.1"
pyo3 = "0.20.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
twig = "0.1.0"
lazy_static = { version = "1.4.0", features = [] }
futures = "0.3.29"
console = "0.15.7"
dialoguer = "0.11.0"
indicatif = "0.17.7"
clap-verbosity-flag = "2.1.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
crossbeam = "0.8.2"
scraper = "0.18.1"
